@@ -6,7 +6,8 @@ Maintainer: Andy Buckle
 Title: dicom: file io for medical images and other data
 Description: Digital communications in medicine (DICOM) file io. 
   Depends on Grassroots DICOM (GDCM). This package is not available
-  in repos for all distros. Contributors: Judd Storrs, Kris Thielemans.
+  in repos for all distros. Contributors: Judd Storrs, Kris Thielemans,
+  John Donoghue
 SystemRequirements: libgdcm2.0 (>= 2.0.16)
 Categories: imaging, medical
 Problems: dicomwrite is not useable
