@@ -9,6 +9,8 @@
 
  ** moved isdicom to own .oct file
 
+ ** added dicomuid function 
+
  Summary of important user-visible changes for dicom 0.1.1 (2011/11):
 -------------------------------------------------------------------------
 
